--- a/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/buyer.html
+++ b/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/buyer.html
@@ -12,8 +12,7 @@
 <body>
 	<section class="position-fixed w-100 page-title bg-light border-secondary shadow border-bottom border-thick">
 		<div class="container pt-4 pb-3 mx-auto px-5">
-			<h1 class="display-4 font-weight-bold d-inline-block"><span class="text-info">n</span>ice-kréme<span
-					class="text-secondary de">.de</span></h1>
+			<h1 class="display-4 font-weight-bold d-inline-block"></span>stelldeineiszusammen.org<span</h1>
 			<a id="cart-link" class="cart-link "><img src="images/outline-shopping_cart-24px.svg"
 					class="m-3 cart-image float-right"></a>
 		</div>
