--- a/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/buyer.html
+++ b/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/buyer.html
@@ -189,7 +189,7 @@
 						</div>
 
 						<div class="row pt-2 pb-1 justify-content-center">
-							<button id="buy-button" class="col-3 btn btn-success mx-3 font-weight-bold" disabled>Buy Now</button>
+							<button id="buy-button" class="col-3 btn btn-success mx-3 font-weight-bold" disabled>Buy</button>
 						</div>
 
 					</div>
@@ -200,65 +200,6 @@
 
 
 
-			<!--<div class="single-order col-12 mb-5">
-				<div class="m-2 shadow-lg rounded px-4 py-5">
-					<div class="pb-4 mb-4 px-5 border-bottom border-secondary row">
-						<div class="col-6">
-							<h4 class="">Bestellung Nr. 1</h4>
-						</div>
-						<div class="col-6 d-flex justify-content-end">
-							<button type="button"
-								class="mr-3 btn btn-success rounded-circle font-weight-bold">✓</button>
-						</div>
-
-					</div>
-
-					<div class="items-wrapper">
-						<div class="row pb-3 mx-4">
-							<div class="col-2 text-muted">Amount</div>
-							<div class="col-7 text-muted">Article</div>
-							<div class="col-2 text-muted text-right">Price</div>
-						</div>
-						<div class="order-row row py-1 rounded mb-1 mx-4">
-							<div class="col-2">12</div>
-							<div class="col-6">Weihnachtsbaumkugeln</div>
-							<div class="col-3 text-right">170.99</div>
-							<div class="col-1">€</div>
-						</div>
-						<div class="order-row row py-1 rounded mb-1 mx-4">
-							<div class="col-2">12</div>
-							<div class="col-6">Weihnachtsbaumkugeln</div>
-							<div class="col-3 text-right">170.99</div>
-							<div class="col-1">€</div>
-						</div>
-						<div class="order-row row py-1 rounded mb-1 mx-4">
-							<div class="col-2">12</div>
-							<div class="col-6">Weihnachtsbaumkugeln</div>
-							<div class="col-3 text-right">170.99</div>
-							<div class="col-1">€</div>
-						</div>
-						<div class="order-row row py-1 rounded mb-1 mx-4">
-							<div class="col-2">12</div>
-							<div class="col-6">Weihnachtsbaumkugeln</div>
-							<div class="col-3 text-right">170.99</div>
-							<div class="col-1">€</div>
-						</div>
-						<div class="order-row row py-1 rounded mb-1 mx-4">
-							<div class="col-2">12</div>
-							<div class="col-6">Weihnachtsbaumkugeln</div>
-							<div class="col-3 text-right">170.99</div>
-							<div class="col-1">€</div>
-						</div>
-					</div>
-					<div class="row pt-3 pb-1 rounded mb-1 mx-4 mt-4">
-
-						<div class="col-9 text-right font-weight-bold">Total</div>
-
-						<div class="col-2 text-right font-weight-bold">1710.99</div>
-						<div class="col-1 font-weight-bold">€</div>
-					</div>
-				</div>
-			</div>-->
 		</div>
 	</div>
 
@@ -275,12 +216,8 @@
 						</button>
 					</div>
 					<div id="modal-body" class="modal-body">
-						<p>We have received your detailed order, and are getting your ice cream ready for you.
-						</p>
-						<p class="my-0">Thank you for ordering at <span class="text-info font-weight-bold">n</span><span
-								class="font-weight-bold">ice-kréme</span><span
-								class="text-secondary de font-weight-bold">.de</span></span>! We are looking forward
-							to seeing you again! </p>
+						
+						<p class="my-0">Thank you for your Order at stelldeineiszusammen.org</p>
 					</div>
 					<div class="modal-footer" id="modal-footer">
 						<button type="button" id="close-modal" class="btn btn-success">Close</button>
