--- a/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/buyer.html
+++ b/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/buyer.html
@@ -24,118 +24,7 @@
 
 	<section id="store" class="container py-3">
 		<div id="categories-wrapper" class="categories-wrapper mb-3">
-			<!--
-			<div class="category mb-5 border-bottom pb-5">
-				<h2 class="pb-1">Select</h2>
-				<div class="mx-5">
-					<label class="form-check-label text-secondary mb-1" for="exampleSelect">Please choose:</label>
-
-					<div class="input-group input-group-lg">
-						<select id="exampleSelect" class="custom-select">
-							<option><Select Form Type></option>
-							<option>Radio</option>
-							<option>Checkbox</option>
-							<option>Select</option>  
-						</select>
-					</div>
-				</div>
-			</div>
-
-			<div class="category mb-5 border-bottom pb-5">
-				<h2 class="pb-3">Checkbox</h2>
-				<div class="mx-5">
-					<div class="px-3 py-2 mb-2 border rounded item-row">
-						<div class="form-check p-1 cursor-pointer px-4 ml-3 row justify-content-between d-flex">
-							<input class="form-check-input cursor-pointer" type="checkbox" name="checkbox"
-								id="exampleCheckbox1" value="option1">
-							<div class="mx-3"></div>
-							<label class="form-check-label pl-2 cursor-pointer col-3" for="exampleCheckbox1">Item
-								A</label>
-							<label class="form-check-label pl-2 cursor-pointer col-3" for="exampleCheckbox1">Price
-								A</label>
-							<label class="form-check-label pl-2 cursor-pointer col-3" for="exampleCheckbox1">Stock left
-								A</label>
-						</div>
-					</div>
-					<div class="px-3 py-2 mb-2 border rounded item-row">
-						<div class="form-check p-1 cursor-pointer px-4 ml-3 row justify-content-between d-flex">
-							<input class="form-check-input cursor-pointer" type="checkbox" name="checkbox"
-								id="exampleCheckbox2" value="option2">
-							<div class="mx-3"></div>
-							<label class="form-check-label pl-2 cursor-pointer col-3" for="exampleCheckbox2">Item
-								B</label>
-							<label class="form-check-label pl-2 cursor-pointer col-3" for="exampleCheckbox2">Price
-								B</label>
-							<label class="form-check-label pl-2 cursor-pointer col-3" for="exampleCheckbox2">Stock left
-								B</label>
-						</div>
-					</div>
-					<div class="px-3 py-2 mb-2 border rounded item-row">
-						<div class="form-check p-1 cursor-pointer px-4 ml-3 row justify-content-between d-flex">
-							<input class="form-check-input cursor-pointer" type="checkbox" name="checkbox"
-								id="exampleCheckbox3" value="option3">
-							<div class="col-1"></div>
-							<label class="form-check-label pl-2 cursor-pointer col-4 font-weight-bold"
-								for="exampleCheckbox3">Item
-								C</label>
-
-							<label class="form-check-label pl-2 cursor-pointer col-3 text-muted text-right"
-								for="exampleCheckbox3">Stock left
-								C</label>
-
-							<label class="form-check-label pl-2 cursor-pointer col-3 text-right text-info"
-								for="exampleCheckbox3">Price
-								C</label>
-							<label class="form-check-label pl-2 cursor-pointer col-1 text-info"
-								for="exampleCheckbox3">€</label>
-						</div>
-					</div>
-				</div>
-			</div>
-
- 
-			<div class="category mb-5 border-bottom pb-5">
-				<h2 class="pb-3">Radiobuttons</h2>
-				<div class="mx-5">
-					<div class="px-3 py-2 mb-2 border rounded item-row">
-						<div class="form-check p-1 cursor-pointer px-4 ml-3 row justify-content-between d-flex">
-							<input class="form-check-input cursor-pointer" type="radio" name="radio" id="exampleRadios1"
-								value="option1">
-							<div class="mx-3"></div>
-							<label class="form-check-label pl-2 cursor-pointer col-3"
-								for="exampleRadios1">Schokostreusel</label>
-							<label class="form-check-label pl-2 cursor-pointer col-3" for="exampleRadios1">3.99
-								€</label>
-							<label class="form-check-label pl-2 cursor-pointer col-3" for="exampleRadios1"></label>
-						</div>
-					</div>
-					<div class="px-3 py-2 mb-2 border rounded item-row">
-						<div class="form-check p-1 cursor-pointer px-4 ml-3 row justify-content-between d-flex">
-							<input class="form-check-input cursor-pointer" type="radio" name="radio" id="exampleRadios2"
-								value="option2">
-							<div class="mx-3"></div>
-							<label class="form-check-label pl-2 cursor-pointer col-3" for="exampleRadios2">Item
-								B</label>
-							<label class="form-check-label pl-2 cursor-pointer col-3" for="exampleRadios2">Price
-								B</label>
-							<label class="form-check-label pl-2 cursor-pointer col-3" for="exampleRadios2">Stock left
-								B</label>
-						</div>
-					</div>
-					<div class="px-3 py-2 mb-2 border rounded item-row">
-						<div class="form-check p-1 cursor-pointer px-4 ml-3 row justify-content-between d-flex">
-							<input class="form-check-input cursor-pointer" type="radio" name="radio" id="exampleRadios3"
-								value="option3">
-							<div class="mx-3"></div>
-							<label class="form-check-label pl-2 cursor-pointer col-3" for="exampleRadios3">Item
-								C</label>
-							<label class="form-check-label pl-2 cursor-pointer col-3" for="exampleRadios3">Price
-								C</label>
-							<label class="form-check-label pl-2 cursor-pointer col-3" for="exampleRadios3">Stock left
-								C</label>
-						</div>
-					</div>
-				</div>-->
+			
 		</div>
 		</div>
 
@@ -151,7 +40,7 @@
 				<div class="col-lg justify-content-end d-flex">
 					<a href="/orders.html" id="orders-button" class="btn btn-outline-secondary my-4 mr-2">Orders</a>
 					<a href="/index.html" id="orders-button"
-						class="btn btn-outline-secondary my-4 mr-3">Configurator</a>
+						class="btn btn-outline-secondary my-4 mr-3">Icecream Configurator</a>
 				</div>
 			</div>
 		</div>
@@ -169,7 +58,7 @@
 		<div class="container">
 			<div class="px-5 row justify-content-center">
 				<div class="cart col-10 px-5 py-4 shadow-lg rounded">
-					<h2 class="text-info pb-2 mb-4 border-bottom px-4">Cart</h2>
+					<h2 class="text-info pb-2 mb-4 border-bottom px-4">Shopping Cart</h2>
 
 					<div class="px-4">
 						<div class="row pb-4">
