--- a/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/index.html
+++ b/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<section class="position-fixed w-100 page-title bg-light border-secondary shadow border-bottom border-thick">
+	<section class="position-fixed w-100 page-title bg-warning border-secondary shadow border-bottom border-thick">
 		<div class="container pt-4 pb-3 mx-auto px-5 justify-content-between d-flex">
 				<h1 class="display-5">Product Management</h1>
 			</div>
