--- a/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/orders.html
+++ b/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/orders.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<section class="position-fixed w-100 page-title bg-light border-secondary shadow border-bottom border-thick">
+	<section class="position-fixed w-100 page-title bg-warning border-secondary shadow border-bottom border-thick">
 		<div class="container pt-4 pb-3 mx-auto px-5 ">
 			<h1 class="display-5">Orders Overview</h1>
 		</div>
