--- a/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/orders.html
+++ b/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/orders.html
@@ -88,7 +88,7 @@
 		<!-- PLACEHOLDER TO BOTTOM -->
 	</section>
 
-	<section id="fixed-controls" class="position-fixed w-100 bg-light border-secondary shadow border-top">
+	<section id="fixed-controls" class="position-fixed w-100 bg-warning border-secondary shadow border-top">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg justify-content-end d-flex">
