--- a/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/index.html
+++ b/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/index.html
@@ -39,7 +39,7 @@
 		</div>
 	</section>
 
-	<section id="fixed-controls" class="position-fixed w-100 bg-primary border-secondary shadow border-top">
+	<section id="fixed-controls" class="position-fixed w-100 bg-light border-secondary shadow border-top">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg justify-content-end d-flex">
