--- a/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/index.html
+++ b/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-
 <head>
 	<meta charset="UTF-8">
 	<title></title>
@@ -11,9 +10,9 @@
 </head>
 
 <body>
-	<section class="position-fixed w-100 page-title bg-warning border-secondary border-thick">
+	<section class="position-fixed w-100 page-title bg-light border-secondary shadow border-bottom border-thick">
 		<div class="container pt-4 pb-3 mx-auto px-5 justify-content-between d-flex">
-				<h1 class="display-5">Product Management</h1>
+				<h1 class="display-5">Category Overview</h1>
 			</div>
 	</section>
 
@@ -23,7 +22,48 @@
 
 	<section id="configurator" class="container py-3">
 		<div id="categories-wrapper" class="categories-wrapper mb-3">
-			
+			<!--<div class="category mb-5 border-bottom pb-2">
+				<div class="category-row row py-2 mb-3">
+					<div class="col-12 col-lg-9 mb-2 mb-lg-0 ">
+						<div class="input-group input-group-lg">
+							<input type="text" class="form-control" placeholder="Category-Name">
+							<select class="custom-select">
+								<option>Select Form Type</option>
+								<option>Radio</option>
+								<option>Checkbox</option>
+								<option>Select</option>
+							</select>
+						</div>
+					</div>
+					<div class="col-12 col-lg-3 justify-content-end d-flex">
+						<button type="button" class="remove-category btn btn-outline-danger w-100">Remove
+							Category</button>
+					</div>
+				</div>
+				<div class="items-wrapper">
+					<div class="row py-2 justify-content-start">
+						<div class="col-lg-1 mb-2 mb-lg-0"></div>
+						<div class="col-lg-9 mb-2 mb-lg-0">
+							<div class="input-group">
+								<input type="text" class="form-control" placeholder="Item-Name">
+								<input type="number" class="form-control" placeholder="Stock">
+								<input type="number" class="form-control" placeholder="Price">
+								<div class="input-group-append">
+									<span class="input-group-text">€</span>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-2 justify-content-end d-flex">
+							<button type="button" class="remove-item btn btn-outline-danger w-100">Remove Item</button>
+						</div>
+					</div>
+					<div class="add-item-row row py-2 justify-content-end">
+						<div class="col-lg-2 justify-content-end d-flex">
+							<button type="button" class="add-item btn btn-outline-success w-100">+ Add Item</button>
+						</div>
+					</div>
+				</div>
+			</div>-->
 
 
 		</div>
@@ -39,14 +79,13 @@
 		</div>
 	</section>
 
-	
-	<section id="fixed-controls" class="position-fixed w-100 bg-light border-secondary">
+	<section id="fixed-controls" class="position-fixed w-100 bg-light border-secondary shadow border-top">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg justify-content-end d-flex">
 					<button type="button" id="save-button" class="btn btn-success my-4 px-5 mr-4">Save</button>
-					<a href="orders.html" id="orders-button" class="btn btn-outline-secondary my-4 mr-2">Orders</a>
-					<a href="buyer.html" id="orders-button" class="btn btn-outline-secondary my-4">Shop</a>
+					<a href="/orders.html" id="orders-button" class="btn btn-outline-secondary my-4 mr-2">Orders</a>
+					<a href="/buyer.html" id="orders-button" class="btn btn-outline-secondary my-4">View Website</a>
 
 				</div>
 			</div>
@@ -67,9 +106,10 @@
 						</button>
 					</div>
 					<div id="modal-body" class="modal-body">
-						<p>Are you sure you want to delete the item <span
+						<p>Are you sure you want to delete <span
 								class="modal-name-placeholder text-danger font-weight-bold"></span>?</p>
-						
+						<p class="my-0">This <span class="modal-type-placeholder"></span> can't be brought back, unless
+							you saved your data structure.</p>
 					</div>
 					<div class="modal-footer" id="modal-footer">
 						<button type="button" id="confirm-modal" class="btn btn-danger">Delete</button>
