--- a/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/orders.html
+++ b/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/orders.html
@@ -9,9 +9,8 @@
 
 </head>
 
-
 <body>
-	<section class="position-fixed w-100 page-title bg-warning border-secondary border-thick">
+	<section class="position-fixed w-100 page-title bg-light border-secondary shadow border-bottom border-thick">
 		<div class="container pt-4 pb-3 mx-auto px-5 ">
 			<h1 class="display-5">Orders Overview</h1>
 		</div>
@@ -23,7 +22,65 @@
 
 	<section id="orders" class="container py-3 mb-3">
 		<div id="orders-wrapper">
-		
+			<!--<div class="single-order col-12 mb-5">
+				<div class="m-2 shadow-lg rounded px-4 py-5">
+					<div class="pb-4 mb-4 px-5 border-bottom border-secondary row">
+						<div class="col-6">
+							<h4 class="">Bestellung Nr. 1</h4>
+						</div>
+						<div class="col-6 d-flex justify-content-end">
+							<button type="button"
+								class="mr-3 btn btn-success rounded-circle font-weight-bold">✓</button>
+						</div>
+
+					</div>
+
+					<div class="items-wrapper">
+						<div class="row pb-3 mx-4">
+							<div class="col-2 text-muted">Amount</div>
+							<div class="col-7 text-muted">Article</div>
+							<div class="col-2 text-muted text-right">Price</div>
+						</div>
+						<div class="order-row row py-1 rounded mb-1 mx-4">
+							<div class="col-2">12</div>
+							<div class="col-6">Weihnachtsbaumkugeln</div>
+							<div class="col-3 text-right">170.99</div>
+							<div class="col-1">€</div>
+						</div>
+						<div class="order-row row py-1 rounded mb-1 mx-4">
+							<div class="col-2">12</div>
+							<div class="col-6">Weihnachtsbaumkugeln</div>
+							<div class="col-3 text-right">170.99</div>
+							<div class="col-1">€</div>
+						</div>
+						<div class="order-row row py-1 rounded mb-1 mx-4">
+							<div class="col-2">12</div>
+							<div class="col-6">Weihnachtsbaumkugeln</div>
+							<div class="col-3 text-right">170.99</div>
+							<div class="col-1">€</div>
+						</div>
+						<div class="order-row row py-1 rounded mb-1 mx-4">
+							<div class="col-2">12</div>
+							<div class="col-6">Weihnachtsbaumkugeln</div>
+							<div class="col-3 text-right">170.99</div>
+							<div class="col-1">€</div>
+						</div>
+						<div class="order-row row py-1 rounded mb-1 mx-4">
+							<div class="col-2">12</div>
+							<div class="col-6">Weihnachtsbaumkugeln</div>
+							<div class="col-3 text-right">170.99</div>
+							<div class="col-1">€</div>
+						</div>
+					</div>
+					<div class="row pt-3 pb-1 rounded mb-1 mx-4 mt-4">
+
+						<div class="col-9 text-right font-weight-bold">Total</div>
+
+						<div class="col-2 text-right font-weight-bold">1710.99</div>
+						<div class="col-1 font-weight-bold">€</div>
+					</div>
+				</div>
+			</div>-->
 		</div>
 	</section>
 
@@ -31,14 +88,14 @@
 		<!-- PLACEHOLDER TO BOTTOM -->
 	</section>
 
-	<section id="fixed-controls" class="position-fixed w-100 bg-light border-secondary">
+	<section id="fixed-controls" class="position-fixed w-100 bg-light border-secondary shadow border-top">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg justify-content-end d-flex">
 					<button id="close-all" href="/index.html" class="btn btn-success my-4 mr-4">Close all
 						orders</button>
-					<a href="index.html" class="btn btn-outline-secondary my-4 mr-2">Product Management</a>
-					<a href="buyer.html" id="orders-button" class="btn btn-outline-secondary my-4 mr-3">View Website</a>
+					<a href="/index.html" class="btn btn-outline-secondary my-4 mr-2">Configurator</a>
+					<a href="/buyer.html" id="orders-button" class="btn btn-outline-secondary my-4 mr-3">View Website</a>
 
 				</div>
 			</div>
