--- a/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/buyer.html
+++ b/Abschlussaufgabe-EIA2-SS19-master/Abschlussaufgabe/src/buyer.html
@@ -150,8 +150,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg justify-content-end d-flex">
-					<a href="/orders.html" id="orders-button" class="btn btn-outline-secondary my-4 mr-2">Orders</a>
-					<a href="/index.html" id="orders-button"
+					<a href="orders.html" id="orders-button" class="btn btn-outline-secondary my-4 mr-2">Orders</a>
+					<a href="index.html" id="orders-button"
 						class="btn btn-outline-secondary my-4 mr-3">Configurator</a>
 				</div>
 			</div>
